@@ -42,6 +42,8 @@ import jdk.graal.compiler.core.common.alloc.RegisterAllocationConfig;
 import jdk.graal.compiler.core.common.cfg.BasicBlock;
 import jdk.graal.compiler.core.common.cfg.BlockMap;
 import jdk.graal.compiler.debug.Assertions;
+import jdk.graal.compiler.debug.CounterKey;
+import jdk.graal.compiler.debug.DebugCloseable;
 import jdk.graal.compiler.debug.DebugContext;
 import jdk.graal.compiler.debug.GraalError;
 import jdk.graal.compiler.debug.Indent;
@@ -78,10 +80,45 @@ public class LinearScan {
         return Assertions.assertionsEnabled() && detailedAsserts;
     }
 
+    /**
+     * These timers can significantly affect the speed of linear scan so they are disabled by
+     * default.
+     */
+    static final boolean DETAILED_TIMERS = false;
+
+    static CounterKey counter(String name) {
+        if (DETAILED_TIMERS) {
+            return DebugContext.counter(name);
+        }
+        return null;
+    }
+
+    static DebugContext.CountingTimerKey countingTimer(String name) {
+        if (DETAILED_TIMERS) {
+            return DebugContext.countingTimer(name);
+        }
+        return null;
+    }
+
+    DebugCloseable start(DebugContext.CountingTimerKey key) {
+        if (key != null) {
+            return key.start(debug);
+        }
+        return null;
+    }
+
+    void increment(CounterKey key) {
+        if (key != null) {
+            key.increment(debug);
+        }
+    }
+
     public static class Options {
         // @formatter:off
         @Option(help = "Enable spill position optimization", type = OptionType.Debug)
         public static final OptionKey<Boolean> LIROptLSRAOptimizeSpillPosition = new NestedBooleanOptionKey(LIRPhase.Options.LIROptimization, true);
+        @Option(help = "Use binary search if interval is longer than this limit", type = OptionType.Debug)
+        public static final OptionKey<Integer> IntervalBinarySearchLimit = new OptionKey<>(100);
         // @formatter:on
     }
 
@@ -196,9 +233,9 @@ public class LinearScan {
      * Sentinel interval to denote the end of an interval list.
      */
     protected final Interval intervalEndMarker;
-    public final Range rangeEndMarker;
     private final boolean detailedAsserts;
     private final LIRGenerationResult res;
+    public final int intervalBinarySearchLimit;
 
     @SuppressWarnings("this-escape")
     protected LinearScan(TargetDescription target, LIRGenerationResult res, MoveFactory spillMoveFactory, RegisterAllocationConfig regAllocConfig, int[] sortedBlocks,
@@ -217,10 +254,10 @@ public class LinearScan {
         this.numVariables = ir.numVariables();
         this.blockData = new BlockMap<>(ir.getControlFlowGraph());
         this.neverSpillConstants = neverSpillConstants;
-        this.rangeEndMarker = new Range(Integer.MAX_VALUE, Integer.MAX_VALUE, null);
-        this.intervalEndMarker = new Interval(Value.ILLEGAL, Interval.END_MARKER_OPERAND_NUMBER, null, rangeEndMarker);
+        this.intervalEndMarker = new Interval(Value.ILLEGAL, Interval.END_MARKER_OPERAND_NUMBER, null);
         this.intervalEndMarker.next = intervalEndMarker;
         this.detailedAsserts = Assertions.detailedAssertionsEnabled(ir.getOptions());
+        this.intervalBinarySearchLimit = Options.IntervalBinarySearchLimit.getValue(ir.getOptions());
     }
 
     /**
@@ -231,7 +268,7 @@ public class LinearScan {
      *         describes a register
      */
     public int getVariableNumber(int operand) {
-        // check if its a variable
+        // check if it's a variable
         if (operand >= firstVariableNumber) {
             return operand - firstVariableNumber;
         }
@@ -252,14 +289,14 @@ public class LinearScan {
     }
 
     public int getFirstLirInstructionId(BasicBlock<?> block) {
-        int result = ir.getLIRforBlock(block).get(0).id();
+        int result = ir.getLIRforBlock(block).getFirst().id();
         assert NumUtil.assertNonNegativeInt(result);
         return result;
     }
 
     public int getLastLirInstructionId(BasicBlock<?> block) {
         ArrayList<LIRInstruction> instructions = ir.getLIRforBlock(block);
-        int result = instructions.get(instructions.size() - 1).id();
+        int result = instructions.getLast().id();
         assert NumUtil.assertNonNegativeInt(result);
         return result;
     }
@@ -377,7 +414,7 @@ public class LinearScan {
     Interval createInterval(AllocatableValue operand) {
         assert isLegal(operand);
         int operandNumber = operandNumber(operand);
-        Interval interval = new Interval(operand, operandNumber, intervalEndMarker, rangeEndMarker);
+        Interval interval = new Interval(operand, operandNumber, intervalEndMarker);
         assert operandNumber < intervalsSize : operandNumber + " " + intervalsSize;
         assert intervals[operandNumber] == null;
         intervals[operandNumber] = interval;
@@ -864,14 +901,14 @@ public class LinearScan {
                     throw new GraalError("");
                 }
 
-                if (i1.first().isEndMarker()) {
+                if (i1.isEmpty()) {
                     debug.log("Interval %d has no Range", i1.operandNumber);
                     debug.log(i1.logString(this));
                     throw new GraalError("");
                 }
 
-                for (Range r = i1.first(); !r.isEndMarker(); r = r.next) {
-                    if (r.from >= r.to) {
+                for (Interval.RangeIterator r = new Interval.RangeIterator(i1); !r.isAtEnd(); r.next()) {
+                    if (r.from() >= r.to()) {
                         debug.log("Interval %d has zero length range", i1.operandNumber);
                         debug.log(i1.logString(this));
                         throw new GraalError("");
